edited html file

--- a/aksdemo.html
+++ b/aksdemo.html
@@ -23,6 +23,6 @@
 <body>
     <h1>Hello World</h1>
     <p>This is my web page</p>
-    <p>Version: fromdevopspipeline</p>
+    <p>Version: InitialStage</p>
 </body>
 </html>
